Visually change the text color when plasma theme changes

Patch by Anne-Marie Mahfouf

For theme text color, the code was Plasma::Theme::ButtonTextColor
instead of Plasma::Theme::TextColor in 2 places. When the theme changes,
make the text change color.

BUG: 320342
REVIEW: 110716